--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-2.28MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
-  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.76MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-319.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇯🇵 日本-8.76MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-5.80MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-529.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-463.5KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1040, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇨🇳 中国-5.37MB/s(Youtube:不良林), server: cmbe3-vdn.zhs.company, port: 35055, type: vmess, uuid: 236ca3b1-897e-32b0-8c94-c5284d3bfd9b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: cmbe3-vdn.zhs.company}}
+  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1260, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇨🇳 中国-310.7KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1320, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林) 2, server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-319.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.76MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.80MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
