--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-364.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇦 加拿大-3.09MB/s(Youtube:不良林), server: 134.195.196.150, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇮🇳 印度-3.05MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-161.8KB/s(Youtube:不良林), server: 103.172.116.9, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-547.2KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
-  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-876.4KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1510, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
-  - {name: 🇨🇳 中国-1014.0KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1370, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇸🇬 新加坡-620.8KB/s(Youtube:不良林), server: 103.172.116.9, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇨🇳 中国-5.02MB/s(Youtube:不良林), server: mplsjs1.ggbbba.xyz, port: 45780, type: ss, cipher: aes-256-gcm, password: gDQ8kr1HdHEK5DGU}
+  - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-156.9KB/s(Youtube:不良林), server: 103.172.116.9, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇸🇬 新加坡-1.78MB/s(Youtube:不良林), server: 103.172.116.9, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇸🇬 新加坡-312.2KB/s(Youtube:不良林), server: 103.172.116.9, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇨🇳 中国-574.1KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1930, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇨🇳 中国-543.0KB/s(Youtube:不良林), server: b10.v2.gay, port: 1930, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: b10.v2.gay}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-620.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-156.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-312.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-620.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-156.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-312.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-620.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-156.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-312.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-620.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-156.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-312.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-620.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-156.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-312.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-620.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-156.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-312.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-364.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.09MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-547.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-620.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-156.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-312.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-574.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
